src/test/ui/rfc-2632-const-trait-impl/impl-with-default-fn-fail.stderr
error[E0046]: not all trait items implemented, missing: `req`
  --> $DIR/impl-with-default-fn-fail.rs:12:1
   |
LL |     fn req(&self);
   |     -------------- `req` from trait
...
LL | impl const Tr for u16 {
   |            ^^ the trait `Tr` is not implemented for `u16`
   |
note: the trait `Tr` is implemented for `u16`, but that implementation is not `const`
  --> $DIR/impl-with-default-fn-fail.rs:12:12
   |
LL | impl const Tr for u16 {
   |            ^^
   = help: the trait `Tr` is implemented for `u16`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
